...
        android:scaleType="fitCenter"/>




    <ImageButton
        android:id="@+id/logout_button_dash"
        android:src="@drawable/logout"
        android:background="@null"
        android:text="Log Out"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="0dp"
...
